[package]
name = "cosm-utils"
version = "0.1.2"
edition = "2021"
authors = ["Eric Woolsey <ewoolsey@ualberta.ca>", "Harry Hull <harry.hull1@gmail.com>"]

readme = "README.md"
description = "Simple utility traits and functions for tendermint_rpc and cosmrs"
repository = "https://github.com/cryptechdev/cosm-utils.git"

keywords = ["cosmos", "client", "tendermint", "cosmwasm", "cosmrs"]
categories = ["cryptography::cryptocurrencies"]
license = "Apache-2.0"

[features]
default = ["generic"]
generic = []
injective = [
    # "dep:injective-protobuf",
    "dep:injective-std",
    # "dep:protobuf",
    ]

[dependencies]
cosmrs = { version = "0.14.0", features = ["rpc", "cosmwasm", "grpc"] }
tendermint-rpc = "0.32.0"
tokio = { version = "1.20.1", features = ["full"]}

log = "0.4"
async-trait = "0.1.57"
thiserror = "1.0.31"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
lazy_static = "1"

keyring = { version = "2", optional = true }
mockall = { version = "0.11.2", optional = true }

# Optional dependencies for injective
# injective-protobuf = { git = "https://github.com/cryptechdev/cw-injective.git", branch = "dev", optional = true }
injective-std = { git = "https://github.com/cryptechdev/cw-injective.git", branch = "dev", optional = true }
# protobuf = { version = "2", optional = true }

[dev-dependencies]
tendermint-rpc = { version = "0.32.0", features = ["websocket-client", "http-client"]}
